# distributed_logger

./: DistributedLogger.hh  README.md  clickhouse_init.go  code_gen.py  docker_run.sh  install_dependencies.sh  mongo_init.go  parse_json.py  run_parser.sh
.github/workflows/: ci.yml
client/LoggerAPI/: IBuffer.hh  IIO.hh  Logger.hh
client/api/: LogAPIs.hh
client/api/iio/: IIO.hh
client/buffer/: EventBuffer.cc  EventBuffer.hh
client/iio/: posix.cc  posix.hh
client/posix_buffer/: EventBufferPosix.cc  EventBufferPosix.hh  PosixBuffer.cc  PosixBuffer.hh
client/posix_iio/: EventIIOPosix.cc  EventIIOPosix.hh
client/posix_io/: PosixIO.cc  PosixIO.hh
client/seastar_buffer/: SeastarBuffer.cc  SeastarBuffer.hh  seastar_buffer.cc  seastar_buffer.hh
client/seastar_iio/: seastar_iio.cc  seastar_iio.hh
client/seastar_io/: SeastarIO.cc  SeastarIO.hh  SeastarTLS_IO.cc  SeastarTLS_IO.hh
docker/: Dockerfile  client.Dockerfile  config.yaml  config_clickhouse.yaml  config_mongo.yaml  server.Dockerfile  server_clickhouse.Dockerfile  server_mongo.Dockerfile  users.xml
docs/: architecture.md  customization.md  storage.md
examples/: CMakeLists.txt  dependencies.sh  example_header.hh  run.sh  run_client.sh  run_server.sh  select_example.cc  simple_example.cc  simple_logging.cc
examples/async_logging/: CMakeLists.txt  async_logging.cc
examples/basic_pipeline/: docker_run_mongo.sh  event_collector.json  mongo_postrun.sh
examples/clickhouse_pipeline/: clickhouse_postrun.sh  docker_run_clickhouse.sh  event_collector.json  storage_config_clickhouse.json
examples/common/: common.cc  common.hh
examples/seastar_app_logging/: CMakeLists.txt  seastar_app_logging.cc  setup_seastar.sh
examples/simple_logging/: CMakeLists.txt  simple_logging.cc
logger/event_collector/: event_collector.go  go.mod
logger/main/: general_config.json  go.mod  main.go
logger/storage/: go.mod  storage.go
logger/storage/clickhouse/: clickhouse.go  go.mod
logger/storage/mongo/: go.mod  mongo.go
server/config/: config.go  go.mod
server/decoder/: decoder.go  go.mod
server/ingester/: go.mod  ingester.go
server/listener/: go.mod  listener.go
server/main/: event_collector.json  general_config.json  go.mod  go.sum  main.go  storage_config.json  storage_config_clickhouse.json  storage_config_mongo.json
server/storage/: go.mod
server/storage/mongo/: go.mod
tests/: test_clickhouse_init_migrate_call.py  test_code_gen.py  test_main_clickhouse_init.py
tools/: build_examples.sh  code_gen.py  parse_json.py  run_parser.sh
tools/codegen/templates/: mongo_init.go
